    instructed by the controlling thread via the update callback
  * Improved the tasklist module to allow for nested backend jobs
  * Refined tasklist
  * Added a stubs for username and timezone
  * Fixed installation finsih page, since reboot was executed before
    showing the page
  * Added cd menu page, to be completed
  * Modified log formatting
  * Completed cd menu page
  * Added mythbuntu to isolist.ini
  * Slight simplification of the frontend
  * Fixed ISO backup during uninstallation
  * Added finish pages
  * Added preliminary code to generate virtual disk files, to be completed
  * Added timezone detection
  * Allocate disk space for virtual disks, to be tested
  * Added wubizip compilation mode, to create a debugger friendly
    environment
  * More robust copytree
  * Use regex to parse .disk/info
  * Fixed task progress callback
  * Have a different uninstallation message when the installer is run
    and a previous installation is detected
  * Path joining whith a drive as first item whitout trailing slash was
    returning the user home directory
  * Improved download manager
  * Added mirror selection
  * Fixed MD5 calculation which was limited to files less than 100MB
  * Refactoring of ISO retrieval code
  * Fixed bootloader modification code
  * Added keyboard layout detection
  * Fixed generation of pressed and menu.lst as the templating was
    incomplete
  * Added wunui functionality that might help with transparent widgets

  [ Hampus Wessman ]
  * Fixed a bug in virtualdisk.py

  [ Agostino Russo ]
  * Fixed formatting of the partitioning section in the preseed file
  * Do not show the console when running pylauncher (thanks Hampus
    Wessman)
  * Added memory and size checks
  * Added tabstops to controls in winui
  * When checking the version string, be less strict and allow
    for subversions (thanks Evan Dandrea)

 -- Agostino Russo <agostino.russo@gmail.com>  Mon, 12 Jan 2009 23:43:41 +0000