@@ -117,7 +117,6 @@ class Backend(object):
         '''
         log.debug("Fetching basic info...")
         self.info.uninstall_before_install = False
-        self.info.backup_dir = "%s.backup" % self.info.application_name
         self.info.original_exe = self.get_original_exe()
         self.info.platform = self.get_platform()
         self.info.osname = self.get_osname
@@ -132,6 +131,7 @@ class Backend(object):
         self.fetch_host_info()
         self.info.uninstaller_path = self.get_uninstaller_path()
         self.info.previous_target_dir = self.get_previous_target_dir()
+        self.info.backup_dir = "%s.backup" % self.info.previous_target_dir
         self.info.previous_backup_dir = self.get_previous_backup_dir()
         self.info.keyboard_layout, self.info.keyboard_variant = self.get_keyboard_layout()
         self.info.total_memory_mb = self.get_total_memory_mb()
