@@ -93,5 +93,8 @@ wubi (9.04) UNRELEASED; urgency=low
   * Added tabstops to controls in winui
   * When checking the version string, be less strict and allow
     for subversions (thanks Evan Dandrea)
+  * Fixed typo in the grub menu template
+  * Run the uninstaller if the binary name begings with 'uninstall-'
+  * Make sure that the backup dir is named after the target dir
 
- -- Agostino Russo <agostino.russo@gmail.com>  Mon, 12 Jan 2009 23:43:41 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Tue, 13 Jan 2009 01:40:51 +0000
